Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Twizy web UI: drivemode buttons secured & added to dashboard
- Twizy web UI: added file dialog for virtual dyno recording
- Web API scripting: /api/execute supporting GET & output control
- Web UI: night mode by URI parameter, e.g. "…/#/dashboard?nm=1"
- Web UI: dashboard accessible w/o login
- Web UI: added config backup & restore tool
- Web UI: file selector added for firmware flashing from SD
- Web UI: text notifications (info/error/alert) displayed as dialogs
- Twizy: SEVCON monitoring & recording
  New commands:
    xrt mon start [<filename>]
    xrt mon stop
    xrt mon reset
  New metrics:
    xrt.i.* = operational inverter data
    xrt.s.* = power & torque by speed (virtual dyno)
- Twizy: experimental powermap calculation including region 3 / breakdown torque
  New config:
    xrt [motor_trq_breakdown] = 0     Breakdown torque in Nm, e.g. 210.375
    xrt [motor_rpm_rated] = 0         Rated speed in rpm, e.g. 2100
  See docs/Renault-Twizy/Twizy-Powermap-Calculator-Tbrk.ods for details.
- Add inactivity watchdog timers to CAN buses
- NissanLeaf: Fix for 0% SOH on 30KWh models with Nissan BMS update

2018-10-24 MWJ  3.1.011  OTA release
- Config backup & restore using encrypted ZIP archives
    (AES 256 bit encryption, supported by e.g. 7z)
  New commands:
    config backup <path> [password=module password]
    config restore <path> [password=module password]
- Support custom MAC address (config network mac ...)

2018-08-26 MWJ  3.1.010  OTA release
- TeslaRoadster: Fix for digital speedo bug
- Bluetooth: Improvements towards bluetooth BLE support
- Server v2: Add cabin temperature to "D" message

2018-08-15 MWJ  3.1.009  OTA release
- Tesla Roadster: COOLDOWN command implementation
- Tesla Roadster: Charge Timer support
- Tesla Roadster: Digital Speedo feature implementation
- Tesla Roadster: Refuse to lock a car that is ON