@@ -33,6 +33,7 @@
 #include <stdio.h>
 #include <string>
 #include <sstream>
+#include <fstream>
 #include <dirent.h>
 #include "ovms_webserver.h"
 #include "ovms_config.h"
@@ -2297,5 +2298,421 @@ void OvmsWebServer::HandleCfgBackup(PageEntry_t& p, PageContext_t& c)
     "})();\n"
     "</script>\n"
   );
+  c.done();
+}
+
+/**
+ * HandleCfgPlugins: configure/edit web plugins (URL /cfg/plugins)
+ */
+
+static void OutputPluginList(PageEntry_t& p, PageContext_t& c)
+{
+  c.print(
+    "<style>\n"
+    ".list-editor > table {\n"
+      "border-bottom: 1px solid #ddd;\n"
+    "}\n"
+    ".list-input .form-control,\n"
+    ".list-input > .btn-group,\n"
+    ".list-input > button {\n"
+      "margin-right: 20px;\n"
+      "margin-bottom: 5px;\n"
+    "}\n"
+    "</style>\n"
+    "\n"
+    "<div class=\"panel panel-primary\">\n"
+      "<div class=\"panel-heading\">Webserver Plugins</div>\n"
+      "<div class=\"panel-body\">\n"
+        "<form class=\"form-inline\" method=\"post\" action=\"/cfg/plugins\" target=\"#main\">\n"
+        "<div class=\"list-editor\" id=\"pluginlist\">\n"
+          "<table class=\"table form-table\">\n"
+            "<colgroup>\n"
+              "<col style=\"width:10%\">\n"
+              "<col style=\"width:90%\">\n"
+            "</colgroup>\n"
+            "<template>\n"
+              "<tr class=\"list-item mode-ITEM_MODE\">\n"
+                "<td><button type=\"button\" class=\"btn btn-danger list-item-del\"><strong>✖</strong></button></td>\n"
+                "<td class=\"list-input\">\n"
+                  "<input type=\"hidden\" name=\"mode_ITEM_ID\" value=\"ITEM_MODE\">\n"
+                  "<select class=\"form-control list-disabled\" size=\"1\" name=\"type_ITEM_ID\">\n"
+                    "<option value=\"page\" data-value=\"ITEM_type\">Page</option>\n"
+                    "<option value=\"hook\" data-value=\"ITEM_type\">Hook</option>\n"
+                  "</select>\n"
+                  "<span><input type=\"text\" required pattern=\"^[a-zA-Z0-9._-]+$\" class=\"form-control font-monospace list-disabled\" placeholder=\"Unique name (letters: a-z/A-Z/0-9/./_/-)\"  title=\"Letters: a-z/A-Z/0-9/./_/-\" name=\"key_ITEM_ID\" id=\"input-key_ITEM_ID\" value=\"ITEM_key\"></span>\n"
+                  "<div class=\"btn-group\" data-toggle=\"buttons\">\n"
+                    "<label class=\"btn btn-default\">\n"
+                      "<input type=\"radio\" name=\"enable_ITEM_ID\" value=\"no\" data-value=\"ITEM_enable\"> OFF\n"
+                    "</label>\n"
+                    "<label class=\"btn btn-default\">\n"
+                      "<input type=\"radio\" name=\"enable_ITEM_ID\" value=\"yes\" data-value=\"ITEM_enable\"> ON\n"
+                    "</label>\n"
+                  "</div>\n"
+                  "<button type=\"button\" class=\"btn btn-default action-edit add-disabled\">Edit</button>\n"
+                "</td>\n"
+              "</tr>\n"
+            "</template>\n"
+            "<tbody class=\"list-items\">\n"
+            "</tbody>\n"
+            "<tfoot>\n"
+              "<tr>\n"
+                "<td><button type=\"button\" class=\"btn btn-success list-item-add\" data-preset='{ \"type\":\"page\", \"enable\":\"yes\" }'><strong>✚</strong></button></td>\n"
+                "<td></td>\n"
+              "</tr>\n"
+            "</tfoot>\n"
+          "</table>\n"
+          "<input type=\"hidden\" class=\"list-item-id\" name=\"cnt\" value=\"0\">\n"
+        "</div>\n"
+        "<div class=\"text-center\">\n"
+          "<button type=\"submit\" class=\"btn btn-primary\">Save</button>\n"
+        "</div>\n"
+        "</form>\n"
+      "</div>\n"
+      "<div class=\"panel-footer\">\n"
+        "<p>You can extend your OVMS web interface by using plugins. A plugin can be attached as a new page or hook into an existing page at predefined places.</p>\n"
+        "<p>Plugin content is loaded from <code>/store/plugin</code> (covered by backups). Plugins currently must contain valid HTML (other mime types will be supported in the future).</p>\n"
+      "</div>\n"
+    "</div>\n"
+    "\n"
+    "<script>\n"
+    "$('#pluginlist').listEditor().on('click', 'button.action-edit', function(evt) {\n"
+      "var $c = $(this).parent();\n"
+      "var data = {\n"
+        "key: $c.find('input[name^=\"key\"]').val(),\n"
+        "type: $c.find('select[name^=\"type\"]').val(),\n"
+      "};\n"
+      "if ($('.list-item.mode-add').length == 0) {\n"
+        "loaduri('#main', 'get', '/cfg/plugins', data);\n"
+      "} else {\n"
+        "confirmdialog(\"Discard changes?\", \"Loading the editor will discard your list changes.\", [\"Cancel\", \"OK\"], function(ok) {\n"
+          "if (ok) loaduri('#main', 'get', '/cfg/plugins', data);\n"
+        "});\n"
+      "}\n"
+    "}).on('list:validate', function(ev) {\n"
+      "var valid = true;\n"
+      "var keycnt = {};\n"
+      "$(this).find('[name^=\"key\"]').each(function(){ keycnt[$(this).val()] = (keycnt[$(this).val()]||0)+1; });\n"
+      "$(this).find('.mode-add [name^=\"key\"]').each(function() {\n"
+        "if (keycnt[$(this).val()] > 1 || !$(this).val().match($(this).attr(\"pattern\"))) {\n"
+          "valid = false;\n"
+          "$(this).parent().addClass(\"has-error\");\n"
+        "} else {\n"
+          "$(this).parent().removeClass(\"has-error\");\n"
+        "}\n"
+      "});\n"
+      "$(this).closest('form').find('button[type=submit]').prop(\"disabled\", !valid);\n"
+    "});\n"
+    );
+
+  OvmsConfigParam* cp = MyConfig.CachedParam("http.plugin");
+  if (cp)
+  {
+    const ConfigParamMap& pmap = cp->GetMap();
+    std::string key, type, enable;
+    
+    for (auto& kv : pmap)
+    {
+      if (!endsWith(kv.first, ".enable"))
+        continue;
+      key = kv.first.substr(0, kv.first.length() - 7);
+      type = cp->IsDefined(key+".hook") ? "hook" : "page";
+      enable = kv.second;
+      c.printf(
+        "$('#pluginlist').listEditor('addItem', { key: '%s', type: '%s', enable: '%s' });\n"
+        , key.c_str(), type.c_str(), enable.c_str());
+    }
+  }
+
+  c.print(
+    "</script>\n"
+    );
+}
+
+static bool SavePluginList(PageEntry_t& p, PageContext_t& c, std::string& error)
+{
+  OvmsConfigParam* cp = MyConfig.CachedParam("http.plugin");
+  if (!cp) {
+    error += "<li>Internal error: <code>http.plugin</code> config not found</li>";
+    return false;
+  }
+
+  const ConfigParamMap& pmap = cp->GetMap();
+  ConfigParamMap nmap;
+  std::string key, type, enable, mode;
+  int cnt = atoi(c.getvar("cnt").c_str());
+  char buf[20];
+
+  for (int i = 1; i <= cnt; i++)
+  {
+    sprintf(buf, "_%d", i);
+    key = c.getvar(std::string("key")+buf);
+    mode = c.getvar(std::string("mode")+buf);
+    if (key == "" || mode == "")
+      continue;
+    type = c.getvar(std::string("type")+buf);
+    enable = c.getvar(std::string("enable")+buf);
+    
+    nmap[key+".enable"] = enable;
+    nmap[key+".page"] = (mode=="add") ? "" : cp->GetValue(key+".page");
+    if (type == "page") {
+      nmap[key+".label"] = (mode=="add") ? "" : cp->GetValue(key+".label");
+      nmap[key+".menu"] = (mode=="add") ? "" : cp->GetValue(key+".menu");
+      nmap[key+".auth"] = (mode=="add") ? "" : cp->GetValue(key+".auth");
+    } else {
+      nmap[key+".hook"] = (mode=="add") ? "" : cp->GetValue(key+".hook");
+    }
+  }
+
+  // deleted:
+  for (auto& kv : pmap)
+  {
+    if (!endsWith(kv.first, ".enable"))
+      continue;
+    if (nmap.count(kv.first) == 0) {
+      key = "/store/plugin/" + kv.first.substr(0, kv.first.length() - 7);
+      unlink(key.c_str());
+    }
+  }
+
+  cp->SetMap(nmap);
+
+  return true;
+}
+
+static void OutputPluginEditor(PageEntry_t& p, PageContext_t& c)
+{
+  std::string key = c.getvar("key");
+  std::string type = c.getvar("type");
+  std::string page, hook, label, menu, auth;
+  extram::string content;
+
+  page = MyConfig.GetParamValue("http.plugin", key+".page");
+  if (type == "page") {
+    label = MyConfig.GetParamValue("http.plugin", key+".label");
+    menu = MyConfig.GetParamValue("http.plugin", key+".menu");
+    auth = MyConfig.GetParamValue("http.plugin", key+".auth");
+  } else {
+    hook = MyConfig.GetParamValue("http.plugin", key+".hook");
+  }
+
+  // read plugin content:
+  std::string path = "/store/plugin/" + key;
+  std::ifstream file(path, std::ios::ate);
+  if (file.is_open()) {
+    auto size = file.tellg();
+    content.resize(size, '\0');
+    file.seekg(0);
+    file.read(&content[0], size);
+  }
+
+  c.printf(
+    "<style>\n"
+    ".textarea-control .btn {\n"
+      "font-weight: bold;\n"
+    "}\n"
+    "</style>\n"
+    "\n"
+    "<div class=\"panel panel-primary\">\n"
+      "<div class=\"panel-heading\">Plugin Editor: <code>%s</code></div>\n"
+      "<div class=\"panel-body\">\n"
+      , _html(key));
+
+  c.printf(
+        "<form method=\"post\" action=\"/cfg/plugins\" target=\"#main\">\n"
+          "<input type=\"hidden\" name=\"key\" value=\"%s\">\n"
+          "<input type=\"hidden\" name=\"type\" value=\"%s\">\n"
+          , _attr(key)
+          , _attr(type));
+
+  if (type == "page")
+  {
+    c.printf(
+          "<div class=\"form-group\">\n"
+            "<label class=\"control-label\" for=\"input-page\">Page:</label>\n"
+            "<input type=\"text\" class=\"form-control font-monospace\" id=\"input-page\" placeholder=\"Enter page URI\" name=\"page\" value=\"%s\">\n"
+            "<span class=\"help-block\">\n"
+              "<p>Note: framework URIs have priority. Use prefix <code>/usr/…</code> to avoid conflicts.</p>\n"
+            "</span>\n"
+          "</div>\n"
+          , _attr(page));
+    c.printf(
+          "<div class=\"form-group\">\n"
+            "<label class=\"control-label\" for=\"input-label\">Label:</label>\n"
+            "<input type=\"text\" class=\"form-control\" id=\"input-label\" placeholder=\"Enter menu label / page title\" name=\"label\" value=\"%s\">\n"
+          "</div>\n"
+          , _attr(label));
+    c.printf(
+          "<div class=\"row\">\n"
+            "<div class=\"form-group col-xs-6\">\n"
+              "<label class=\"control-menu\" for=\"input-menu\">Menu:</label>\n"
+              "<select class=\"form-control\" id=\"input-menu\" size=\"1\" name=\"menu\">\n"
+                "<option %s>None</option>\n"
+                "<option %s>Main</option>\n"
+                "<option %s>Tools</option>\n"
+                "<option %s>Config</option>\n"
+                "<option %s>Vehicle</option>\n"
+              "</select>\n"
+            "</div>\n"
+          , (menu == "None") ? "selected" : ""
+          , (menu == "Main") ? "selected" : ""
+          , (menu == "Tools") ? "selected" : ""
+          , (menu == "Config") ? "selected" : ""
+          , (menu == "Vehicle") ? "selected" : "");
+    c.printf(
+            "<div class=\"form-group col-xs-6\">\n"
+              "<label class=\"control-auth\" for=\"input-auth\">Authorization:</label>\n"
+              "<select class=\"form-control\" id=\"input-auth\" size=\"1\" name=\"auth\">\n"
+                "<option %s>None</option>\n"
+                "<option %s>Cookie</option>\n"
+                "<option %s>File</option>\n"
+              "</select>\n"
+            "</div>\n"
+          "</div>\n"
+          , (auth == "None") ? "selected" : ""
+          , (auth == "Cookie") ? "selected" : ""
+          , (auth == "File") ? "selected" : "");
+  }
+  else // type == "hook"
+  {
+    c.printf(
+          "<div class=\"form-group\">\n"
+            "<label class=\"control-label\" for=\"input-page\">Page:</label>\n"
+            "<input type=\"text\" class=\"form-control font-monospace\" id=\"input-page\" placeholder=\"Enter page URI\" name=\"page\" value=\"%s\">\n"
+          "</div>\n"
+          , _attr(page));
+    c.printf(
+          "<div class=\"form-group\">\n"
+            "<label class=\"control-label\" for=\"input-hook\">Hook:</label>\n"
+            "<input type=\"text\" class=\"form-control font-monospace\" id=\"input-hook\" placeholder=\"Enter hook code\" name=\"hook\" value=\"%s\" list=\"hooks\">\n"
+            "<datalist id=\"hooks\">\n"
+              "<option value=\"body.pre\">\n"
+              "<option value=\"body.post\">\n"
+            "</datalist>\n"
+          "</div>\n"
+          , _attr(hook));
+  }
+
+  c.printf(
+          "<div class=\"form-group\">\n"
+            "<label class=\"control-label\" for=\"input-content\">Plugin content:</label>\n"
+            "<div class=\"textarea-control pull-right\">\n"
+              "<button type=\"button\" class=\"btn btn-sm btn-default tac-wrap\" title=\"Wrap long lines\">☇</button>\n"
+              "<button type=\"button\" class=\"btn btn-sm btn-default tac-smaller\">&minus;</button>\n"
+              "<button type=\"button\" class=\"btn btn-sm btn-default tac-larger\">&plus;</button>\n"
+            "</div>\n"
+            "<textarea class=\"form-control font-monospace\" style=\"max-width:100%; min-width:100%; height:300px; white-space:nowrap; font-size:13px;\" id=\"input-content\" rows=\"20\" name=\"content\">%s</textarea>\n"
+          "</div>\n"
+          , _html(content.c_str()));
+
+  c.print(
+          "<div class=\"text-center\">\n"
+            "<button type=\"reset\" class=\"btn btn-default\">Reset</button>\n"
+            "<button type=\"button\" class=\"btn btn-default action-cancel\">Cancel</button>\n"
+            "<button type=\"submit\" class=\"btn btn-primary action-save\">Save</button>\n"
+          "</div>\n"
+        "</form>\n"
+      "</div>\n"
+    "</div>\n"
+    "\n"
+    "<script>\n"
+    "\n"
+    "$('.tac-wrap').on('click', function(ev) {\n"
+      "var $this = $(this), $ta = $this.parent().next();\n"
+      "$ta.css(\"white-space\", $this.hasClass(\"active\") ? \"nowrap\" : \"pre-wrap\").focus();\n"
+      "$this.toggleClass(\"active\");\n"
+    "});\n"
+    "$('.tac-smaller').on('click', function(ev) {\n"
+      "var $this = $(this), $ta = $this.parent().next();\n"
+      "var fs = parseInt($ta.css(\"font-size\"));\n"
+      "$ta.css(\"font-size\", (fs-1)+\"px\").focus();\n"
+    "});\n"
+    "$('.tac-larger').on('click', function(ev) {\n"
+      "var $this = $(this), $ta = $this.parent().next();\n"
+      "var fs = parseInt($ta.css(\"font-size\"));\n"
+      "$ta.css(\"font-size\", (fs+1)+\"px\").focus();\n"
+    "});\n"
+    "\n"
+    "$('.action-cancel').on('click', function(ev) {\n"
+      "loaduri('#main', 'get', '/cfg/plugins');\n"
+    "});\n"
+    "\n"
+    "</script>\n");
+}
+
+static bool SavePluginEditor(PageEntry_t& p, PageContext_t& c, std::string& error)
+{
+  OvmsConfigParam* cp = MyConfig.CachedParam("http.plugin");
+  if (!cp) {
+    error += "<li>Internal error: <code>http.plugin</code> config not found</li>";
+    return false;
+  }
+
+  ConfigParamMap nmap = cp->GetMap();
+  std::string key = c.getvar("key");
+  std::string type = c.getvar("type");
+  extram::string content;
+
+  nmap[key+".page"] = c.getvar("page");
+  if (type == "page") {
+    nmap[key+".label"] = c.getvar("label");
+    nmap[key+".menu"] = c.getvar("menu");
+    nmap[key+".auth"] = c.getvar("auth");
+  } else {
+    nmap[key+".hook"] = c.getvar("hook");
+  }
+
+  cp->SetMap(nmap);
+
+  // write plugin content:
+  c.getvar("content", content);
+  mkpath("/store/plugin");
+  std::string path = "/store/plugin/" + key;
+  std::ofstream file(path, std::ios::out | std::ios::trunc);
+  if (file.is_open()) {
+    file.write(content.data(), content.size());
+  } else {
+    error += "<li>Could not save plugin content to <code>" + path + "</code>!</li>";
+    return false;
+  }
+
+  return true;
+}
+
+void OvmsWebServer::HandleCfgPlugins(PageEntry_t& p, PageContext_t& c)
+{
+  std::string key = c.getvar("key");
+  std::string error, info;
+
+  if (c.method == "POST") {
+    if (key == "") {
+      if (SavePluginList(p, c, error)) {
+        info = "<p class=\"lead\">Plugin registration saved.</p>"
+          "<script>$(\"#menu\").load(\"/menu\")</script>";
+      }
+    }
+    else {
+      if (SavePluginEditor(p, c, error)) {
+        info = "<p class=\"lead\">Plugin <code>" + key + "</code> saved.</p>"
+          "<script>$(\"#menu\").load(\"/menu\")</script>";
+        key = "";
+      }
+    }
+  }
+
+  if (error != "") {
+    error = "<p class=\"lead\">Error!</p><ul class=\"errorlist\">" + error + "</ul>";
+    c.head(400);
+    c.alert("danger", error.c_str());
+  } else {
+    c.head(200);
+    if (info != "")
+      c.alert("success", info.c_str());
+  }
+
+  if (key == "")
+    OutputPluginList(p, c);
+  else
+    OutputPluginEditor(p, c);
+
   c.done();
 }
